apps/labrinth/k8s/scopes/friends/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: routes
spec:
  parentRefs:
    - name: main-gateway
      namespace: ${GATEWAY_NAMESPACE}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v3/friends
        - path:
            type: PathPrefix
            value: /v3/friend
      backendRefs:
        - name: friends-labrinth
          port: 80
